--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -92,7 +92,7 @@
                             <path fill-rule="evenodd" d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"/>
                         </svg>
                     </div>
-                    <a class="btn btn-link py-3 font-weight-bold rounded-0 text-decoration-none text-white btn-outline-primary" style="background-color:#9968ff;" href="{% url 'menu:trouser_by_category' 'collections' %}">Go To Collections</a>
+                    <a class="btn btn-link py-3 font-weight-bold rounded-0 text-decoration-none text-white btn-outline-primary" style="background-color:#9968ff;" href="{% url 'menu:trouser_by_category' 'cargo-collections' %}">Go To Collections</a>
                 </div>
             </div>
         </transition>
